--- a/public/back/index.html
+++ b/public/back/index.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>乐淘商城</title>
+    <!--引入插件-->
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
 </head>
-<body>
-后台管理系统首页
+<body >
+
+<!--左侧侧边栏-->
+<div class="lt_aside">
+    <!--标题-->
+    <div class="brand"><a href="#">黑马25期</a></div>
+    <!--用户信息-->
+    <div class="user"><img src="./images/default.png" alt=""> <p>超级管理员</p></div>
+    <!--d导航-->
+    <div class="nav">
+        <ul>
+            <li ><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+            <li><a href="javascript:;"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
+            <div class="child" style="display: none">
+                <a href="first.html" >一级分类</a>
+                <a href="second.html">二级分类</a>
+            </div>
+            </li>
+            <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+
+        </ul>
+    </div>
+
+</div>
+
+
+<!--右侧主体部分-->
+<div class="lt_main">
+    <!--头部-->
+    <div class="lt_topbar">
+        <a class="pull-right icon_menu" href="#"><i class="glyphicon glyphicon-align-justify"></i></a>
+        <a class="pull-left icon_logout" href="#"><i class="glyphicon glyphicon-log-out"></i></a>
+    </div>
+    <!--流式布局-->
+    <div class="container-fluid">
+            <!--路径导航-->
+        <ol class="breadcrumb mt_20">
+            <li><a href="index.html">管理系统</a></li>
+            <li><a href="#">首页</a></li>
+        </ol>
+    </div>
+</div>
+
+
+
+
+
+<script src="./lib/jquery/jquery.min.js"></script>
+<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/nprogress/nprogress.js"></script>
+<script src="js/index.js"></script>
+<script src="./js/common.js"></script>
 </body>
 </html>
