首页-公共功能完成

--- a/public/back/first.html
+++ b/public/back/first.html
@@ -20,12 +20,12 @@
     <!--d导航-->
     <div class="nav">
         <ul>
-            <li ><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+            <li ><a href="user.html" class=""><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
             <li><a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
-            <div class="child" style="display: none">
-                <a href="first.html" >一级分类</a>
-                <a href="second.html">二级分类</a>
-            </div>
+                <div class="child" >
+                    <a href="first.html" class="current" >一级分类</a>
+                    <a href="second.html">二级分类</a>
+                </div>
             </li>
             <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
 
@@ -46,10 +46,11 @@
     </div>
     <!--流式布局-->
     <div class="container-fluid">
-            <!--路径导航-->
+        <!--路径导航-->
         <ol class="breadcrumb mt_20">
             <li><a href="index.html">管理系统</a></li>
-            <li><a href="#">首页</a></li>
+            <li><a href="#">分类管理</a></li>
+            <li><a href="#">一级分类</a></li>
         </ol>
     </div>
 </div>
@@ -78,7 +79,6 @@
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
-<script src="js/index.js"></script>
 <script src="./js/common.js"></script>
 </body>
 </html>
