首页图标完成

--- a/public/back/index.html
+++ b/public/back/index.html
@@ -51,6 +51,13 @@
             <li><a href="index.html">管理系统</a></li>
             <li><a href="#">首页</a></li>
         </ol>
+        <!--Echers图标-->
+        <div class="lt_content">
+            <!--准备两个具备宽高的容器-->
+            <div class="echarts_1 pull-left"></div>
+            <div class="echarts_2 pull-right"></div>
+        </div>
+
     </div>
 </div>
 
@@ -78,7 +85,8 @@
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
-<script src="js/index.js"></script>
+<script src="./lib/echarts/echarts.min.js"></script>
 <script src="./js/common.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
