用户管理基本渲染完成

--- a/public/back/user.html
+++ b/public/back/user.html
@@ -51,8 +51,29 @@
             <li><a href="index.html">管理系统</a></li>
             <li><a href="#">用户管理</a></li>
         </ol>
+        <!--表格模块-->
+        <div class="lt_content">
+            <!--表格-->
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <th width="10%">序号</th>
+                    <th width="20%">用户名</th>
+                    <th width="30%">手机号</th>
+                    <th width="20%">状态</th>
+                    <th width="20%">操作</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+
     </div>
 </div>
+<!--模板引擎-->
+
 
 <!--模态框-->
 <div class="modal fade" tabindex="-1"  id="logoutModal">
@@ -73,11 +94,28 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-
+<script type="text/html" id="tpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{i+1}}</td>
+        <td>{{v.username}}</td>
+        <td>{{v.mobile}}</td>
+        <td>{{v.isDelete === 1? "正常":"禁用"}}</td>
+        {{if v.isDelete ===1}}
+        <td><button class="btn btn-danger">禁用</button></td>
+        {{/if}}
+        {{if v.isDelete ===0}}
+        <td><button class="btn btn-success">启用</button></td>
+        {{/if}}
+    </tr>
+    {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/user.js"></script>
 </body>
 </html>
