用户管理-分页渲染

--- a/public/back/user.html
+++ b/public/back/user.html
@@ -68,8 +68,14 @@
 
                 </tbody>
             </table>
+            <!--分页插件-->
+            <!--准备容器-->
+<!--加个父元素-->
+            <div class="text-right">
+                <ul id="paginator" ></ul>
+            </div>
         </div>
-
+        <!---->
     </div>
 </div>
 <!--模板引擎-->
@@ -97,7 +103,7 @@
 <script type="text/html" id="tpl">
     {{each rows v i}}
     <tr>
-        <td>{{i+1}}</td>
+        <td>{{i+1+(page-1)*size}}</td>
         <td>{{v.username}}</td>
         <td>{{v.mobile}}</td>
         <td>{{v.isDelete === 1? "正常":"禁用"}}</td>
@@ -115,6 +121,7 @@
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/user.js"></script>
 </body>
