--- a/public/back/first.html
+++ b/public/back/first.html
@@ -52,6 +52,27 @@
             <li><a href="#">分类管理</a></li>
             <li><a href="#">一级分类</a></li>
         </ol>
+        <div class="lt_content">
+            <button class="btn btn-default mb_20" style="margin-bottom: 20px">添加分类</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <th width="20%">序号</th>
+                    <th width="80%">一级分类</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!--模板渲染-->
+                </tbody>
+            </table>
+            <!--准备分页容器-->
+            <div class="text-right">
+                <ul id="paginator">
+                </ul>
+
+            </div>
+
+        </div>
     </div>
 </div>
 
@@ -73,12 +94,23 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
+<!--准备模板-->
+<script type="text/html" id="tpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{i+1+(page-1)*size }}</td>
+        <td>{{v.categoryName}}</td>
+    </tr>
+    {{/each}}
+</script>
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/first.js"></script>
 </body>
 </html>
