--- a/public/back/second.html
+++ b/public/back/second.html
@@ -108,9 +108,30 @@
                 </div>
                 <div class="modal-body">
                     <!--表单模板-->
-
                     <div class="form-group">
-                        <input type="text" class="form-control" name="categoryName"  placeholder="请输入一级分类">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown" >
+                            <span id="dropdownText">请选择一级分类</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" >
+
+                            </ul>
+                        </div>
+                        <input type="hidden" name="categoryId">
+                        <!--火热的品牌-->
+                        <input type="hidden" name="host" value="1">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="brandName"  placeholder="请输入二级分类">
+                    </div>
+                    <div class="form-group">
+                      <label class="btn btn-default" for="fileupload">上传图片 </label>
+                        <input type="file" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic" style="display: none">
+                    </div>
+                    <div class="form-group" id="imgBox">
+                        <img src="./images/none.png" width="100" alt="">
+                        <input type="hidden" name="brandLogo">
                     </div>
 
                     <!--表单模板-->
@@ -138,12 +159,25 @@
     {{/each}}
 </script>
 
+<!--模态框的模板引擎-->
+<script type="text/html" id="dropdownTpl">
+{{each rows v i}}
+    <li><a href="#" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+{{/each}}
+</script>
+
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<!--引包文件上传的-->
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+
+
+
 <script src="./js/common.js"></script>
 <script src="./js/second.js"></script>
 </body>
