--- a/public/back/product.html
+++ b/public/back/product.html
@@ -20,14 +20,14 @@
     <!--d导航-->
     <div class="nav">
         <ul>
-            <li ><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+            <li ><a href="user.html" class=""><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
             <li><a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
                 <div class="child" style="display: none">
                     <a href="first.html" >一级分类</a>
-                    <a href="second.html">二级分类</a>
+                    <a href="second.html " >二级分类</a>
                 </div>
             </li>
-            <li><a href="product.html" class="current"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+            <li><a href="product.html"  class="current"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
 
         </ul>
     </div>
@@ -51,6 +51,32 @@
             <li><a href="index.html">管理系统</a></li>
             <li><a href="#">商品管理</a></li>
         </ol>
+        <div class="lt_content">
+            <button class="btn btn-default mb_20" style="margin-bottom: 20px" id="addBtn">添加商品</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+               <tr>
+                   <th  width="10%">序号</th>
+                   <th  width="25%">商品名称</th>
+                   <th  width="25%">商品描述</th>
+                   <th  width="10%">商品库存</th>
+                   <th  width="10%">商品尺寸</th>
+                   <th  width="10%">商品状态</th>
+                   <th  width="10%">操作</th>
+               </tr>
+                </thead>
+                <tbody>
+           <!--挖坑的地方-->
+                </tbody>
+            </table>
+            <!--准备分页容器-->
+            <div class="text-right">
+                <ul id="paginator">
+                </ul>
+
+            </div>
+
+        </div>
     </div>
 </div>
 
@@ -73,11 +99,124 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!--模态框-->
+<div class="modal fade" tabindex="-1"  id="addModal">
+    <div class="modal-dialog ">
+        <div class="modal-content">
+            <form id="form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">添加商品</h4>
+                </div>
+                <div class="modal-body">
+                    <!--表单模板-->
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button"  data-toggle="dropdown" >
+                                <span id="dropdownText">请选择二级分类</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" >
+                                <!--<li><a href="#">帆布鹏</a></li>-->
+                                <!--挖坑-->
+                            </ul>
+                        </div>
+                        <!--隐藏id d 隐藏域-->
+                        <input type="hidden" name="brandId">
+
+                    </div>
+                    <!--配置的模态框-->
+                    <!--商品名称-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="proName"  placeholder="请输入商品名称">
+                    </div>
+                    <!--商品描述-->
+                    <div class="form-group">
+                        <textarea name="proDesc" class="form-control" cols="30" rows="5" placeholder="请输入商品描述"></textarea>
+                        <!--<input type="text" class="form-control" name="proDesc"  placeholder="请输入商品描述">-->
+                    </div>
+                    <!--商品库存-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="num"  placeholder="请输入商品库存">
+                    </div>
+                    <!--商品尺码-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="size"  placeholder="请输入商品尺码">
+                    </div>
+                    <!--商品原价-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="oldPrice"  placeholder="请输入商品原价">
+                    </div>
+                    <!--商品现价-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="price"  placeholder="请输入商品现价">
+                    </div>
+                    <div class="form-group">
+                        <label class="btn btn-default" for="fileupload">上传图片 </label>
+                        <input type="file" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic" style="display: none">
+                    </div>
+                    <div class="form-group" id="imgBox">
+                        <img src="./images/none.png" width="100" alt="">
+                        <img src="./images/none.png" width="100" alt="">
+                        <img src="./images/none.png" width="100" alt="">
+
+
+                    </div>
+
+                    <!--表单模板-->
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary" >提交</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<!--准备模板-->
+
+<script type="text/html" id="productTpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{i+1+(page-1)*size}}</td>
+        <td>{{v.proName}}</td>
+        <td>{{v.proDesc}}</td>
+        <td>{{v.num}}</td>
+        <td>{{v.size}}</td>
+        <td>{{ v.statu === 1 ?"已上架":"已下架"}}</td>
+        <td>
+            {{ if v.statu === 1 }}
+            <button class="btn btn-danger">下架</button>
+            {{ else }}
+            <button class="btn btn-success">上架</button>
+            {{/if}}
+        </td>
+    </tr>
+    {{/each}}
+</script>
+
+<!--准备模态框的渲染模板-->
+<script type="text/html" id="dropdownTpl">
+        {{each rows v i}}
+        <!--存储id-->
+    <li><a data-id="{{v.id}}" href="#">{{v.brandName}}</a></li>
+    {{/each}}
+</script>
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<!--引包文件上传的-->
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+
+
+
 <script src="./js/common.js"></script>
+<script src="./js/product.js"></script>
 </body>
 </html>
