移动端首页完成

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -10,6 +10,7 @@
     <!--引入字体图标库-->
     <link rel="stylesheet" href="./lib/fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 <!--全屏容器-->
@@ -21,7 +22,106 @@
         <a href="search.html" class="icon_right"><i class="fa fa-search"></i></a>
     </div>
     <!--乐淘主体-->
-    <div class="lt_main">哈哈哈</div>
+    <div class="lt_main">
+        <div class="mui-scroll-wrapper">
+            <div class="mui-scroll">
+                <!--放置轮播图的位置-->
+                <div class="mui-slider">
+                    <div class="mui-slider-group mui-slider-loop">
+                        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
+                        <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
+                        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
+                    </div>
+                    <!--小圆点-->
+                    <div class="mui-slider-indicator">
+                        <div class="mui-indicator mui-active"></div>
+                        <div class="mui-indicator"></div>
+                        <div class="mui-indicator"></div>
+                        <div class="mui-indicator"></div>
+                        <div class="mui-indicator"></div>
+                        <div class="mui-indicator"></div>
+                    </div>
+                </div>
+                <!--导航-->
+                <div class="lt_nav">
+                    <ul class="mui-clearfix">
+                        <li><a href=""><img src="./images/nav1.png" alt=""></a></li>
+                        <li><a href=""><img src="./images/nav2.png" alt=""></a></li>
+                        <li><a href=""><img src="./images/nav3.png" alt=""></a></li>
+                        <li><a href=""><img src="./images/nav4.png" alt=""></a></li>
+                        <li><a href=""><img src="./images/nav5.png" alt=""></a></li>
+                        <li><a href=""><img src="./images/nav6.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <!--产品模块-->
+                <div class="lt_product">
+                    <ul>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+                        <li class="lt_product_item"><a href="#">
+                            <img src="./images/product.jpg" alt="">
+                            <p class="mui-ellipsis-2">ad撒大声大声道撒大大撒旦撒旦撒大声大声道撒</p>
+                            <p>
+                                <span class="price">￥560</span>
+                                <span class="oldPrice">￥560</span>
+                            </p>
+                            <button class="mui-btn mui-btn-primary">立即购买</button>
+                        </a></li>
+
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--乐淘底部-->
     <div class="lt_footer">
         <ul>
@@ -62,5 +162,6 @@ index.html
 
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
