分类页一级分类二级分类渲染完成

--- a/public/front/category.html
+++ b/public/front/category.html
@@ -26,51 +26,8 @@
         <div class="lt_category_left">
             <div class="mui-scroll-wrapper">
                 <div class="mui-scroll">
-                    <ul>
-                        <li><a href="#" class="current">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
-                        <li><a href="#">运动馆</a></li>
+                    <ul >
+                        <!--<li><a href="#" class="current">运动馆</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -85,48 +42,7 @@
                                 <p>耐克</p>
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand2.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand3.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/brand1.png" alt="">
-                                <p>耐克</p>
-                            </a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -172,6 +88,23 @@
 
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
+<script src="./js/category.js"></script>
+<script type="text/html" id="leftTpl">
+    {{each rows v i}}
+    <li><a href="#" class="{{i === 0? 'current':''}}" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+    {{/each}}
+</script>
+<script type="text/html" id="rightTpi">
+    {{each rows v i}}
+        <li>
+            <a href="#">
+                <img src={{v.brandLogo}} alt="">
+                <p>{{v.brandName}}</p>
+            </a>
+        </li>
+    {{/each}}
+</script>
 </body>
 </html>
