搜索中心-删除功能，添加功能完成

--- a/public/front/search.html
+++ b/public/front/search.html
@@ -81,7 +81,7 @@
                 {{each arr v i}}
                 <li>
                     <a href="#" class="mui-pull-left">{{v}}</a>
-                    <i class="mui-icon mui-icon-closeempty mui-pull-right"></i>
+                    <i data-index="{{i}}" class="btn_del mui-icon mui-icon-closeempty mui-pull-right"></i>
                 </li>
                 {{/each}}
             </ul>
