封装-解析地址栏参数的方法

--- a/public/front/search.html
+++ b/public/front/search.html
@@ -80,7 +80,7 @@
             <ul>
                 {{each arr v i}}
                 <li>
-                    <a href="#" class="mui-pull-left">{{v}}</a>
+                    <a href="searchList.html?key={{ v }}" class="mui-pull-left">{{v}}</a>
                     <i data-index="{{i}}" class="btn_del mui-icon mui-icon-closeempty mui-pull-right"></i>
                 </li>
                 {{/each}}
