搜索列表-功能完成

--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -33,14 +33,14 @@
                 <!--排序-->
                 <div class="lt_sort">
                     <a href="#">上架时间 <i class="fa fa-angle-down"></i></a>
-                    <a href="#" class="current">价格 <i class="fa  fa-angle-down"></i></a>
-                    <a href="#">库存 <i class="fa  fa-angle-down"></i></a>
+                    <a data-type="price" href="#" class="current">价格 <i class="fa  fa-angle-down"></i></a>
+                    <a data-type="num" href="#">库存 <i class="fa  fa-angle-down"></i></a>
                     <a href="#">折扣 <i class="fa  fa-angle-down"></i></a>
                 </div>
                 <!--产品模块-->
                 <!--产品模块-->
                 <div class="lt_product">
-
+                        <div class="loading"></div>
 
                 </div>
             </div>
