下拉刷新-上拉刷新加载功能完成

--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -28,7 +28,7 @@
                 <!--搜索模块-->
                 <div class="lt_search">
                     <input type="text" class="search_input" placeholder="请输入搜索关键子">
-                    <button class="mui-btn mui-btn-primary seach_btn" >搜索</button>
+                    <button class="mui-btn mui-btn-primary search_btn" >搜索</button>
                 </div>
                 <!--排序-->
                 <div class="lt_sort">
@@ -40,7 +40,7 @@
                 <!--产品模块-->
                 <!--产品模块-->
                 <div class="lt_product">
-                        <div class="loading"></div>
+                        <!--<div class="loading"></div>-->
 
                 </div>
             </div>
@@ -78,10 +78,10 @@
 </div>
 <script type="text/html" id="productTpl">
 
-    <ul>
+    <ul class="mui-clearfix">
         {{each data v i}}
         <li class="lt_product_item">
-            <a href="#">
+            <a href="product.html?productId={{v.id}}" data-id="{{v.id}}">
             <img src="{{ v.pic[0].picAddr }}" alt="">
             <p class="mui-ellipsis-2">{{v.proName}}</p>
             <p>
@@ -100,6 +100,6 @@
 <script src="./lib/zepto/zepto.min.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
-<script src="js/searchList.js"></script>
+<script src="js/searchList2.js"></script>
 </body>
 </html>
