--- a/public/front/cart.html
+++ b/public/front/cart.html
@@ -70,7 +70,13 @@
 {{each arr v i}}
     <li class="mui-table-view-cell mui-transitioning cart_item">
         <div class="mui-slider-right mui-disabled">
-            <a class="mui-btn mui-btn-primary mui-icon mui-icon-compose btn_edit" ></a>
+            <a class="mui-btn mui-btn-primary mui-icon mui-icon-compose btn_edit"
+               data-id="{{v.id}}"
+               data-num="{{v.num}}"
+               data-productNum="{{v.productNum}}"
+               data-size="{{v.size}}"
+               data-productSize="{{v.productSize}}"
+            ></a>
             <a class="mui-btn mui-btn-danger mui-icon mui-icon-trash btn_del" data-id="{{v.id}}"></a>
         </div>
         <div class="mui-slider-handle">
@@ -99,6 +105,32 @@
     </li>
     {{/each}}
 </script>
+<script type="text/html" id="editTpl">
+    <!--尺码-->
+    <div class="lt_size item_box">
+        尺码:
+        <%
+        var arr=productsize.split("-");//根据这个符号切割
+        var start=arr[0];//第一个索引
+        var end=arr[1];//最后一个
+        for(var i=start;i<=end;i++){
+        %>
+        <span class="{{i == size ? 'current':''}}">{{i}}</span>
+        <%
+        }
+        %>
+    </div>
+    <!--数量-->
+    <div class="lt_num ">
+        数量:
+        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='{{productnum}}'>
+            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+            <input class="mui-numbox-input" type="number" value="{{num}}"/>
+            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+        </div>
+    </div>
+</script>
+
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
